--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				  <div class="modal-header">
 					<h5 class="modal-title" id="exampleModalLabel">
 						<i class="bi bi-info-circle" style="color: warning;"></i>	
-						Plus d'info sur cetter page web :
+						Plus d'info sur cette page web :
 						<i class="bi bi-info-circle" style="color: warning;"></i>
 					</h5>
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -152,7 +152,7 @@
 				  <div class="modal-body">
 					Pourquoi une page web, et pourquoi noir et jaune? <br>
 					<div class="alert alert-success" roll="alert"> 
-					  J'ai choisis de faire une page web pour m'entrainer dans mon apprentissage des outils informatique appris au BUT. Ainsi j'ai choisis le jaune et le noir car ce sont mes couleurs préférés. 
+					  J'ai choisis de faire une page web pour m'entrainer dans mon apprentissage des outils informatique web développés àl'IUT. Ainsi j'ai choisis le jaune et le noir car ce sont mes couleurs préférés. 
 					</div>
 				  </div>
 				  <div class="modal-footer">
