--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 							<ul>
 								<li>Faire à manger</li>
 								<li>Coder (html css / java)</li>
+								<li>Travailler en groupe</li>
 							</ul>
 						</div>
 					</div>
@@ -99,6 +100,12 @@
 								<li>Borné</li>
 								<li>Calme</li>
 								<li>Discret</li>
+								<li>Agréable</li>
+								<li>généreux</li>
+								<li>Sociable</li>
+								<li>Intelligent</li>
+								<li>Bon</li>
+								<li>Relaxé</li>
 							</ul>
 						</div>
 					</div>
@@ -111,6 +118,8 @@
 								<li>A l'écoute</li>
 								<li>Adaptabilité</li>
 								<li>Empathie</li>
+								<li>Courtoisie</li>
+								<li>Engagé</li>
 							</ul>
 						</div>
 					</div>
