--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 						<li>Plaisant</li>
 						<li>Calme</li>
 						<li>Pas trop prenant</li>
-						<li>QUi paye plutot bien</li>
+						<li>Qui paye plutot bien</li>
 					</ul>
 					</div>
 				</div>
